--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,5 +1,6 @@
 Config { overrideRedirect = False
-       , font     = "xft:iosevka-9"
+       -- , font     = "xft:iosevka-9"
+       , font     = "xft:Ubuntu:weight=bold:pixelsize=15:antialias=true:hinting=true"
        , bgColor  = "#360e58"
        , fgColor  = "#f8f8f2" , position = TopW L 90
        , commands = [ Run Weather "EGPF"
@@ -24,10 +25,26 @@ Config { overrideRedirect = False
                         ]
                     , Run Memory ["--template", "Mem: <usedratio>%"] 10
                     , Run Swap [] 10
+		    , Run Battery        [ "--template" , "Batt: <acstatus>"
+                             , "--Low"      , "10"        -- units: %
+                             , "--High"     , "80"        -- units: %
+                             , "--low"      , "darkred"
+                             , "--normal"   , "darkorange"
+                             , "--high"     , "darkgreen"
+
+                             , "--" -- battery specific options
+                                       -- discharging status
+                                       , "-o"	, "<left>% (<timeleft>)"
+                                       -- AC "on" status
+                                       , "-O"	, "<fc=#dAA520>Charging</fc>"
+                                       -- charged status
+                                       , "-i"	, "<fc=#006000>Charged</fc>"
+                             ] 50
                     , Run Date "%a %Y-%m-%d <fc=#8be9fd>%H:%M</fc>" "date" 10
                     , Run XMonadLog
+                    , Run Brightness ["-t", "Brightness: [<bar>]", "-D", "/sys/class/backlight/intel_backlight"] 10
                     ]
        , sepChar  = "%"
        , alignSep = "}{"
-       , template = "%XMonadLog% }{ %alsa:default:Master% | %cpu% | %memory% * %swap% | %EGPF% | %date% "
+       , template = "%XMonadLog% }{ %alsa:default:Master% | %brightness% | %battery% | %cpu% | %memory% * %swap% | %date% "
        }
